--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <h3>JavaScript Refresher</h3>
-    <button id="btn">Click now</button>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+    </head>
+    <body>
+        <h3>JavaScript Refresher</h3>
+        <button id="btn">Click now</button>
 
-    <!-- script file -->
-    <script src="/event.js"></script>
-    <script src="/test.js"></script>
-  </body>
+        <!-- script file -->
+        <script src="/event.js"></script>
+        <script src="/test.js"></script>
+        <script src="/this.js"></script>
+    </body>
 </html>
