--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     </head>
     <body>
         <h3>JavaScript Refresher</h3>
-        <button id="btn">Click now</button>
+        <button>Click now</button>
 
         <!-- script file -->
-        <script src="/event.js"></script>
-        <script src="/test.js"></script>
+        <!-- <script src="/event.js"></script> -->
+        <!-- <script src="/test.js"></script> -->
         <script src="/this.js"></script>
     </body>
 </html>
