explore call method in js

--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
         <button>Click now</button>
 
         <!-- script file -->
-        <!-- <script src="/event.js"></script> -->
-        <!-- <script src="/test.js"></script> -->
-        <script src="/this.js"></script>
+        <script src="/callApplyBind.js"></script>
     </body>
 </html>
