explore inheritance with get set methods

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
         <button>Click now</button>
 
         <!-- script file -->
-        <script src="/classes.js"></script>
+        <script src="/inheritance.js"></script>
     </body>
 </html>
