--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
         <button>Click now</button>
 
         <!-- script file -->
-        <script src="/callback.js"></script>
+        <script src="/async-await.js"></script>
     </body>
 </html>
